--- a/mobile/app/src/main/res/layout/activity_main.xml
+++ b/mobile/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     android:background="@drawable/bg_background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -28,7 +29,6 @@
             android:id="@+id/wallets_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
             tools:listitem="@layout/item_wallet">
         </androidx.recyclerview.widget.RecyclerView>
 
@@ -38,7 +38,6 @@
             android:layout_height="wrap_content"
             android:background="@drawable/btn_simple"
             android:layout_marginVertical="20dp"
-            android:layout_marginHorizontal="40dp"
             android:text="@string/add_new_wallet"
             android:textAppearance="@style/simple_button"
             android:textColor="@color/light_gray"
