--- a/mobile/app/src/main/res/layout/activity_profile.xml
+++ b/mobile/app/src/main/res/layout/activity_profile.xml
@@ -45,13 +45,14 @@
             android:layout_height="200dp"
             android:elevation="5dp"
             android:padding="20dp"
+            android:src="@drawable/profile_picture_placeholder"
             android:scaleType="centerCrop"
             />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="40dp"
+            android:padding="10dp"
             android:layout_margin="20dp"
             android:orientation="vertical"
             android:gravity="center"
@@ -87,17 +88,16 @@
                 android:id="@+id/balance_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
                 android:textAppearance="@style/simple_label_bold"
                 android:textSize="20sp"
                 android:layout_weight="1"
-                android:text="@string/saldo_label" />
+                android:text="@string/balance_label" />
 
             <Button
                 android:id="@+id/edit_profile_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_margin="10dp"
                 android:background="@drawable/btn_simple"
                 android:text="@string/edit_profile"
                 android:textAppearance="@style/simple_button"
