--- a/mobile/app/src/main/res/layout/item_user_search.xml
+++ b/mobile/app/src/main/res/layout/item_user_search.xml
@@ -11,14 +11,16 @@
         android:id="@+id/profile_image_iv"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_weight="0.2"
         android:elevation="5dp"
-        android:layout_marginStart="20dp"
+        android:src="@drawable/profile_picture_placeholder"
         android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/member_name_tv"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_weight="0.8"
         android:textAppearance="@style/simple_label"
         android:textSize="18sp"
         android:gravity="center_vertical"
@@ -29,6 +31,7 @@
         android:id="@+id/user_btn"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginEnd="10dp" />
+        android:layout_weight="0.08"
+        android:layout_marginEnd="10dp"/>
 
 </LinearLayout>
